--- a/Sublime_Clone.conf
+++ b/Sublime_Clone.conf
@@ -10,7 +10,7 @@ name=Sublime Clone
 description=
 version=0001
 author=Berba
-url=http://download.geany.org/contrib/Sublime_Clone.tar.gz
+url=https://github.com/berbant/RunPod/blob/main/Sublime_Clone.conf
 # list of each compatible Geany release version
 compat=1.22;1.23;1.23.1;1.24
 
